Fix responsive images and social

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -53,6 +53,7 @@ a {
 a:active,
 a:hover {
   outline: 0;
+  text-decoration: none;
 }
 abbr[title] {
   border-bottom: 1px dotted;
@@ -228,13 +229,14 @@ a {
 }
 a:hover,
 a:focus {
-  color: #23527c;
-  text-decoration: underline;
+  color: #337ab7;
+  text-decoration: none;
 }
 a:focus {
   outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
+  text-decoration: none;
 }
 figure {
   margin: 0;
